<resources>
    <!-- Strings for top text in activities -->
    <string name="app_name">Chataton</string>
    <string name="topTextLogin">Login</string>
    <string name="topTextRegister">Register</string>
    <string name="topTextProfile">Account Settings</string>

    <!-- Strings for buttons -->
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <!-- Strings that will be used as hints in input fields -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="language">Choose language</string>
    <string name="email_hint">Email</string>

    <!-- Fonts to be used as strings -->
    <string name="icon_arrow_left">&#xf060;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back">BACK</string>
    <string name="home">HOME</string>
    <string name="messages">MESSAGES</string>
    <string name="profile">PROFILE</string>
    <string name="title_activity_map_fragment">Map</string>
    <string name="new_password_hint">New Password</string>
    <string name="old_password_hint">Old Password</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="change_password_button">Change Password</string>
    <string name="new_message">New Message</string>
    <string name="write_message">Write Message...</string>
    <string name="send">Send</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password_top_text">Change Password</string>
</resources>
