<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <Button
        android:id="@+id/buttonGoBack"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/go_back"
        android:textColor="@color/staticText"
        android:textSize="14sp"
        android:visibility="visible"
        app:icon="@drawable/ic_action_arrow_back"
        app:iconTint="@color/staticText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- INPUT FOR USERNAME -->

    <TextView
        android:id="@+id/changePasswordTopText"
        android:layout_width="275dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:text="@string/change_password_top_text"
        android:textAlignment="center"
        android:textColor="@color/staticText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/old_password_hint"
        android:theme="@style/InputFields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordTopText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputOldPassword"
            android:layout_width="258dp"
            android:layout_height="46dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- INPUT FOR PASSWORD -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/new_password_hint"
        android:theme="@style/InputFields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNewPassword"
            android:layout_width="258dp"
            android:layout_height="46dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/repeat_password_hint"
        android:theme="@style/InputFields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputRepeatPassword"
            android:layout_width="258dp"
            android:layout_height="46dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/staticText"
        android:text="@string/change_password_button"
        android:theme="@style/PrimaryButton"
        app:cornerRadius="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>