<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkBackground"
    tools:context=".ProfileFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!--
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/old_password_hint"
        android:theme="@style/InputFields"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTopText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileOldPassword"
            android:layout_width="258dp"
            android:layout_height="46dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/new_password_hint"
        android:theme="@style/InputFields"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPasswordLabel">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profileNewPassword"
        android:layout_width="258dp"
        android:layout_height="46dp"
        android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="@string/repeat_password_hint"
        android:theme="@style/InputFields"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileRepeatPassword"
            android:layout_width="258dp"
            android:layout_height="46dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="@color/staticText"
        android:text="@string/change_password_button"
        android:theme="@style/PrimaryButton"
        android:layout_gravity="center_horizontal"
        app:cornerRadius="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />
    -->

    <TextView
        android:id="@+id/profileTopText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/topTextProfile"
        android:textAlignment="center"
        android:textColor="@color/staticText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSignOut"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="100dp"
        android:text="@string/sign_out_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:cornerRadius="75dp"
        app:layout_constraintTop_toBottomOf="@+id/profileTopText"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeleteAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/staticText"
        app:strokeColor="@color/staticText"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/buttonDeleteAccount"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="400dp"
        android:text="@string/delete_account"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        app:cornerRadius="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="@color/staticText"
        app:rippleColor="@color/staticText"
        app:strokeWidth="3dp"
        android:backgroundTint="@color/deleteAccount"/>


</FrameLayout>